Добавление нативного формата Рефакторинг Добавление фичи ошибки для hb_Default и подсказок ДДобавление подробных атрибутов в package.json Удаление лишних файлов

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,7 @@
 			"request": "launch",
 			"runtimeExecutable": "code",
 			"args": [
-				"--extensionDevelopmentPath=${workspaceFolder}",
-				"--disable-extensions"
+				"--extensionDevelopmentPath=${workspaceFolder}"
 			],
 			"outFiles": ["${workspaceFolder}/out/**/*.js"]
 		}
